# StandardML

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml
docker-utils/: entrypoint.sh
docs/diagrams/: diagram.mermaid
src/standardml/: __main__.py  app.py  base.py
src/standardml/cloud/: __init__.py  base.py  factory.py  providers.py
src/standardml/datasets/index/: __init__.py  factory.py
src/standardml/datasets/processing/: image.py  numeric.py
src/standardml/integrations/: __init__.py  integrations.py  mlflow.py
src/standardml/ml/: framework.py  model.py  utils.py
src/standardml/ml/sklearn/: dataparser.py  factory.py  framework.py  imodel.py  mappers.py  outputs.py
src/standardml/ml/tensorflow/: dataparser.py  factory.py  framework.py  imodel.py  mappers.py  outputs.py
src/standardml/pipelines/: base.py  builder.py
src/standardml/runtime/: executor.py  parse.py
tests/: .coverage  pytest.ini
tests/resources/: input_config_reg_sklearn_train.json  input_config_semseg_train.json
tests/resources/datasets/regression/: diabetes.npz
tests/resources/pipelines/: pipeline_basic.json  pipeline_image_input_and_label.json
tests/src/tests_datasets/: test_index.py
tests/src/tests_integrations/: test_integrations.py
tests/src/tests_ml/tests_sklearn/: test_parse_sklearn.py
tests/src/tests_ml/tests_tensorflow/: test_dataparser.py
tests/src/tests_pipelines/: test_base.py  test_builder.py
tests/src/tests_runtime/: test_parse.py
(+10 files in other folders)
